--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -86,6 +86,7 @@
             android:text="@string/sign_up" />
 
         <TextView
+            android:id="@+id/signInLink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
